[workspace.package]
version = "0.4.3"
edition = "2021"
license = "MIT"
authors = ["Will Duquette <will@wjduquette.com>", "Zizheng Guo <gzz_2000@126.com>", "Junzhuo Zhou <zhou@junzhuo.site>"]
description = "Embeddable TCL interpreter for Rust applications (personal forked)"
repository = "https://github.com/zao111222333/molt-forked"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]
documentation = "https://docs.rs/molt-forked"

[workspace]
resolver = "2"
members = [
    "molt",
    "molt-shell",
    "molt-wasm",
    "molt-wasm/demo",
    "molt-app",
]
[workspace.dependencies]
molt-forked = { path = "molt" }
molt-wasm-demo = { path = "molt-wasm/demo" }

[profile.release]
opt-level = 3
lto = true
