[package]
name = "molt-ng-app"
version = "0.3.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Molt Shell Application"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt-ng = { version = "0.3.1", path = "../molt", registry = "zzdeps" }
molt-ng-shell = { version = "0.3.1", path = "../molt-shell", registry = "zzdeps" }

[[bin]]
name = "moltsh"
path = "src/main.rs"
