[package]
name = "molt-app"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
molt-forked = { path = "../molt" }
molt-shell = { path = "../molt-shell" }

[[bin]]
name = "moltsh"
path = "src/main.rs"
