[package]
name = "molt-ng-shell"
version = "0.4.0"
authors = ["Will Duquette <will@wjduquette.com>", "Zizheng Guo <gzz_2000@126.com>"]
edition = "2018"
description = "Molt Application Frameworks"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt-ng = { version = "0.4.0", path = "../molt", registry = "zzdeps" }
rustyline = "5.0.0"
