[package]
name = "molt-shell"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
molt-forked = { path = "../molt" }
rustyline = "5.0.0"
