[package]
name = "molt-wasm"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
molt-forked = {version = "0.4.5", features = ["wasm"]}
# molt-forked = { path = "../molt",features = ["wasm"] }
web-sys = { version = "0.3", features = ["Element"] }
gloo = { version = "0.11", features = ["events"] }
yew = { version = "0.21", features = ["csr"] }
yew_icons = {version = "0.8", features = [
    "BootstrapCheckLg",
    "FontAwesomeSolidXmark",
    "FontAwesomeSolidEllipsis",
]}