[package]
name = "molt-ng"
version = "0.4.1"
authors = ["Will Duquette <will@wjduquette.com>", "Zizheng Guo <gzz_2000@126.com>"]
edition = "2018"
description = "Embeddable TCL interpreter for Rust applications ()"
repository = "https://bitbucket.org/zzdeps/molt-ng"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
clilog = { version = "0.2.4", registry = "zzdeps" }
indexmap = "1.3.0"
