[package]
name = "molt-forked"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
cfg-if = "1.0.0"
indexmap = "2.2"
wasm-timer = { version = "0.2.5", optional = true}

[features]
default = []
wasm = ["dep:wasm-timer"]
