[package]
name = "molt-wasm-demo"
description = "Demo of molt-wasm"
version = "0.4.2"
edition = "2021"
authors = ["Junzhuo Zhou <zhou@junzhuo.site>"]

[dependencies]
molt-wasm = { path = "../../molt-wasm" }
log = "0.4.6"
web-sys = { version = "0.3", features = ["Element"] }
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew_icons = {version = "0.8", features = ["BootstrapGithub"]}

[build-dependencies]
chrono = "0.4"